<resources>
    <string name="app_name">MAD-Assessment-4</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="continue_as">Continue as</string>
    <string name="guest">Guest </string>
    <string name="already_have_account">I already have an account</string>
    <string name="name">Name</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="address">Address</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_profile">Save Profile</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="save_pizza">Save Pizza</string>
    <string name="message">Message</string>
    <string name="pizza">Pizza</string>
</resources>