<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterActivity"
    android:padding="16dp"
    >

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/register"
        android:textColor="@color/primaryColor"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegister">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="0dp"
            android:hint="@string/name"
            android:textColorHint="@color/lightGrey">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPhone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="0dp"
            android:hint="@string/telephone_number"
            android:textColorHint="@color/lightGrey">

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlAddress"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="0dp"
            android:hint="@string/address"
            android:textColorHint="@color/lightGrey">

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/email"
            android:padding="0dp"
            android:textColorHint="@color/lightGrey">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="0dp"
            android:hint="@string/password"
            android:textColorHint="@color/lightGrey">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/register"
            android:textSize="17sp"
            app:cornerRadius="5dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:text="@string/already_have_account"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnGoLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/login"
            android:textSize="17sp"
            android:textStyle="bold"
            app:cornerRadius="5dp" />

        <LinearLayout
            android:id="@+id/btnContinueGuest"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5sp"
                android:layout_marginVertical="20dp"
                android:text="@string/continue_as"
                android:textColor="@color/lightGrey"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:text="@string/guest"
                android:textColor="@color/primaryColor"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>