<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".views.PizzaHomeActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/back_arrow"
            android:rotation="180"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColorHint="@color/lightGrey">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <!-- Pizza Description -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textColorHint="@color/lightGrey">

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <!-- Pizza Price -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:textColorHint="@color/lightGrey">

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/ivPizzaImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_placeholder"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="size"
            android:textColorHint="@color/lightGrey">
            <Spinner
                android:id="@+id/spinnerSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/pizza_sizes"
                android:spinnerStyle="@style/SpinnerTextStyle"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/save_pizza"
        android:textSize="17sp"
        app:cornerRadius="5dp"
        android:textStyle="bold"
        />

</LinearLayout>